Fixed Scroll bar that appeared on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,7 @@ secondary light = #587ca5 */
   position: absolute;
   top: 0;
   right: 0;
-  width: 100%;
+  width: 100vw;
 
   /* background: -webkit-linear-gradient(
     top,
